--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "pfp",
+	"name": "-.-.-.-",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -38,8 +38,10 @@
 	"type": "module",
 	"dependencies": {
 		"autoprefixer": "^10.4.15",
-		"postcss": "^8.4.29",
 		"phosphor-svelte": "^2.0.1",
-		"tailwindcss": "^3.4.4"
+		"postcss": "^8.4.29",
+		"tailwind-scrollbar-hide": "^4.0.0",
+		"tailwindcss": "^3.4.4",
+		"tailwindcss-animate": "^1.0.7"
 	}
 }
