--- a/package.json
+++ b/package.json
@@ -16,21 +16,29 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
+		"@internationalized/date": "^3.8.1",
+		"@lucide/svelte": "^0.544.0",
 		"@playwright/test": "^1.47.2",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.5.27",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@tailwindcss/vite": "^4.1.14",
 		"@typescript-eslint/eslint-plugin": "^5.62.0",
 		"@typescript-eslint/parser": "^5.62.0",
+		"bits-ui": "^2.11.0",
+		"clsx": "^2.1.1",
 		"eslint": "^8.57.1",
 		"eslint-config-prettier": "^8.10.0",
 		"eslint-plugin-svelte": "^2.45.1",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.6",
-		"prettier-plugin-tailwindcss": "^0.5.14",
+		"prettier-plugin-tailwindcss": "^0.6.14",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"tailwind-merge": "^3.3.1",
+		"tailwind-variants": "^3.1.1",
 		"tslib": "^2.7.0",
+		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.6.2",
 		"vite": "^5.4.4",
 		"vitest": "^1.0.0"
@@ -40,8 +48,8 @@
 		"autoprefixer": "^10.4.15",
 		"phosphor-svelte": "^2.0.1",
 		"postcss": "^8.4.29",
+		"svelte-persisted-store": "^0.12.0",
 		"tailwind-scrollbar-hide": "^4.0.0",
-		"tailwindcss": "^3.4.4",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss": "^4.1.14"
 	}
 }
